@@ -1,21 +1,18 @@
-// src/main/java/com/marriagebureau/usermanagement/model/AppUser.java
-package com.marriagebureau.usermanagement.model; // <--- Package is correct
+package com.marriagebureau.usermanagement.model;
 
-import com.marriagebureau.brokermanagement.model.BrokerProfile; // <--- Import BrokerProfile (will create this soon)
-import com.marriagebureau.usermanagement.entity.AppUserListener;
-
+import com.fasterxml.jackson.annotation.JsonManagedReference;
+import com.marriagebureau.brokermanagement.model.BrokerProfile;
 import jakarta.persistence.*;
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
-import lombok.NoArgsConstructor;
+import lombok.*;
+import org.springframework.data.annotation.CreatedDate;
+import org.springframework.data.annotation.LastModifiedDate;
+import org.springframework.data.jpa.domain.support.AuditingEntityListener;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
-
 import java.time.LocalDateTime;
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @Data
 @Builder
@@ -23,8 +20,7 @@ import java.util.Collections;
 @AllArgsConstructor
 @Entity
 @Table(name = "app_users")
-@EntityListeners(AppUserListener.class) // AppUserListener will manage createdDate/lastUpdatedDate
-
+@EntityListeners(AuditingEntityListener.class)
 public class AppUser implements UserDetails {
 
     @Id
@@ -36,66 +32,57 @@ public class AppUser implements UserDetails {
 
     @Column(nullable = false)
     private String password;
-
+    
     private String contactNumber;
-
-    @Builder.Default
-    private boolean enabled = true; // For account verification (Phase 1.5)
 
     @Enumerated(EnumType.STRING)
     @Column(nullable = false)
-    @Builder.Default
-    private Role role = Role.ROLE_BROKER; // <--- Default role set to ROLE_BROKER
+    private Role role;
 
+    @OneToOne(mappedBy = "broker", cascade = CascadeType.ALL, fetch = FetchType.LAZY, orphanRemoval = true)
+    @JsonManagedReference
+    private BrokerProfile brokerProfile;
+
+    @Builder.Default
+    @Column(name = "account_non_expired")
+    private boolean accountNonExpired = true;
+    
+    @Builder.Default
+    @Column(name = "account_non_locked")
+    private boolean accountNonLocked = true;
+    
+    @Builder.Default
+    @Column(name = "credentials_non_expired")
+    private boolean credentialsNonExpired = true;
+    
+    @Builder.Default
+    private boolean enabled = true;
+
+    @CreatedDate
     @Column(name = "created_date", nullable = false, updatable = false)
     private LocalDateTime createdDate;
 
+    @LastModifiedDate
     @Column(name = "last_updated_date", nullable = false)
     private LocalDateTime lastUpdatedDate;
 
-    // One-to-one relationship with BrokerProfile (for the broker's own details)
-    // 'mappedBy' refers to the field name in the BrokerProfile entity that owns the relationship.
-    // We'll define a 'broker' field in BrokerProfile that links back to AppUser.
-    @OneToOne(mappedBy = "broker", cascade = CascadeType.ALL, orphanRemoval = true, fetch = FetchType.LAZY) // <--- Renamed and adjusted mappedBy
-    private BrokerProfile brokerProfile; // <--- Renamed 'profile' to 'brokerProfile'
-
-
-    // --- UserDetails interface methods ---
-    
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.singletonList(new SimpleGrantedAuthority(this.role.name()));
+        return List.of(new SimpleGrantedAuthority(role.name()));
     }
 
     @Override
-    public String getUsername() {
-        return this.email;
-    }
+    public String getUsername() { return email; }
 
     @Override
-    public boolean isAccountNonExpired() {
-        return true;
-    }
+    public boolean isAccountNonExpired() { return this.accountNonExpired; }
 
     @Override
-    public boolean isAccountNonLocked() {
-        return true;
-    }
+    public boolean isAccountNonLocked() { return this.accountNonLocked; }
 
     @Override
-    public boolean isCredentialsNonExpired() {
-        return true;
-    }
+    public boolean isCredentialsNonExpired() { return this.credentialsNonExpired; }
 
     @Override
-    public boolean isEnabled() {
-        return this.enabled;
-    }
-
-    @Override
-    public String getPassword() {
-        return this.password;
-    }
-
-    // No need for @PrePersist/@PreUpdate here as they are handled by AppUserListener
+    public boolean isEnabled() { return this.enabled; }
 }
